HDIV CHANGELOG
==============
http://www.hdiv.org

Release 2.1.1
==================================

 * New 'debugMode' configuration mode to log the attacks but don`t stop it.
 
Release 2.1.0
==================================

 * JavaDoc and License correction.

Release 2.1.0.RC3
==================================

 * Final Spring Framework 3.1.0 version support.
 * Configurable IUserData instance in the scheme.
 * Better support for anchored urls.
 * Refactor of the url splitting and processing classes. 

Release 2.1.0.RC2
==================================

 * Hdiv schema for simpler configuration.

Release 2.1.0.RC1
==================================

------- New Features -------

 * Support for JSF 1.2
 * Support for JSF 2.0
 
------- Improvements --------

 * WebFlow deletes session pages when conversation ends. 
   Consecuently, parameter (flowExecutionKey/execution) is no longer added automatically.
 * URLs with anchor (#) are now correctly managed.
 
------- NEW CLASSES AND MODIFICATIONS -------

 * added hdiv-jsf module
 * added hdiv-jsf-2 module
 * added hdiv-web-jsf-bookstore module
 
 Changed paths:
 	M /hdiv-core/trunk/src/main/java/org/hdiv/util/Constants.java
	M /hdiv-core/trunk/src/main/java/org/hdiv/util/HDIVRequestUtils.java
	M /hdiv-jstl-taglibs-1.2/trunk/src/main/java/org/hdiv/taglibs/standard/tag/common/core/RedirectSupportHDIV.java
	M /hdiv-jstl-taglibs-1.2/trunk/src/main/java/org/hdiv/taglibs/standard/tag/common/core/UrlSupportHDIV.java
	M /hdiv-core/trunk/src/main/java/org/hdiv/util/HDIVRequestUtils.java
	M /hdiv-core/trunk/src/main/java/org/hdiv/session/SessionHDIV.java

Release 2.1.0.M2
==================================

------- New Features -------

 * Support for Spring MVC 3.0.4
 * Support for Spring Webflow 2.1.1
 
------- Improvements --------
 
 * Better error handling support.
 * The bean 'multipartConfig' is not required, interesting for applications without multipart requests.