@@ -15,14 +15,21 @@
  */
 package org.hdiv.config.xml;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Hashtable;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 
 import org.hdiv.config.HDIVValidations;
+import org.hdiv.config.validations.DefaultValidationParser;
+import org.hdiv.validator.Validation;
+import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.beans.factory.support.BeanDefinitionBuilder;
+import org.springframework.beans.factory.support.RootBeanDefinition;
 import org.springframework.beans.factory.xml.AbstractSingleBeanDefinitionParser;
+import org.springframework.beans.factory.xml.ParserContext;
 import org.w3c.dom.Element;
 import org.w3c.dom.NamedNodeMap;
 import org.w3c.dom.Node;
@@ -32,6 +39,16 @@ import org.w3c.dom.NodeList;
  * BeanDefinitionParser for <hdiv:editableValidations> element.
  */
 public class EditableValidationsBeanDefinitionParser extends AbstractSingleBeanDefinitionParser {
+
+	/**
+	 * Location of the xml file with default editable validations.
+	 */
+	private static final String DEFAULT_VALIDATION_PATH = "org/hdiv/config/validations/defaultEditableValidations.xml";
+
+	/**
+	 * List with default editable validation bean ids.
+	 */
+	private List defaultValidationIds = new ArrayList();;
 
 	/*
 	 * (non-Javadoc)
@@ -44,13 +61,25 @@ public class EditableValidationsBeanDefinitionParser extends AbstractSingleBeanD
 	/*
 	 * (non-Javadoc)
 	 * @see org.springframework.beans.factory.xml.AbstractSingleBeanDefinitionParser#doParse(org.w3c.dom.Element, 
-	 * org.springframework.beans.factory.support.BeanDefinitionBuilder)
+	 * org.springframework.beans.factory.xml.ParserContext, org.springframework.beans.factory.support.BeanDefinitionBuilder)
 	 */
-	protected void doParse(Element element, BeanDefinitionBuilder bean) {
+	protected void doParse(Element element, ParserContext parserContext, BeanDefinitionBuilder bean) {
 
 		Map map = new Hashtable();
 		bean.addPropertyValue("rawUrls", map);
 		bean.setInitMethodName("init");
+
+		//Register default editable validation
+		boolean registerDefaults = true;
+		String registerDefaultsValue = element.getAttributes().getNamedItem("registerDefaults").getTextContent();
+		if (registerDefaultsValue != null) {
+			registerDefaults = Boolean.TRUE.toString().equalsIgnoreCase(registerDefaultsValue);
+		}
+
+		if (registerDefaults) {
+			//Create beans for default validations
+			createDefaultEditableValidations(element, parserContext);
+		}
 
 		NodeList list = element.getChildNodes();
 
@@ -58,7 +87,7 @@ public class EditableValidationsBeanDefinitionParser extends AbstractSingleBeanD
 			Node node = list.item(i);
 			if (node.getNodeType() == Node.ELEMENT_NODE) {
 				if (node.getLocalName().equalsIgnoreCase("validationRule")) {
-	
+
 					this.processValidationRule(node, bean, map);
 				}
 			}
@@ -74,9 +103,21 @@ public class EditableValidationsBeanDefinitionParser extends AbstractSingleBeanD
 	private void processValidationRule(Node node, BeanDefinitionBuilder bean, Map map) {
 
 		String value = node.getTextContent();
+		List ids = this.convertToList(value);
+
 		NamedNodeMap attributes = node.getAttributes();
 		String url = attributes.getNamedItem("url").getTextContent();
-		List ids = this.convertToList(value);
+
+		boolean enableDefaults = false;
+		String enableDefaultsVal = attributes.getNamedItem("enableDefaults").getTextContent();
+		if (enableDefaultsVal != null) {
+			enableDefaults = Boolean.TRUE.toString().equalsIgnoreCase(enableDefaultsVal);
+		}
+		if (enableDefaults) {
+			// Add defaults
+			ids.addAll(this.defaultValidationIds);
+		}
+
 		map.put(url, ids);
 
 	}
@@ -87,9 +128,52 @@ public class EditableValidationsBeanDefinitionParser extends AbstractSingleBeanD
 	 * @return List with bean id's
 	 */
 	private List convertToList(String data) {
+		data = data.trim();
+		if (data == null || data.length() == 0) {
+			return new ArrayList();
+		}
 		String[] result = data.split(",");
 		List list = Arrays.asList(result);
-		return list;
+		return new ArrayList(list);
+
+	}
+
+	/**
+	 * Create beans for the default editable validations.
+	 * @param element xml element
+	 * @param parserContext xml parser context
+	 */
+	private void createDefaultEditableValidations(Element element, ParserContext parserContext) {
+
+		//Load validations from xml
+		DefaultValidationParser parser = new DefaultValidationParser();
+		parser.readDefaultValidations(DEFAULT_VALIDATION_PATH);
+		List validations = parser.getValidations();
+
+		this.defaultValidationIds = new ArrayList();
+
+		Iterator it = validations.iterator();
+		while (it.hasNext()) {
+			
+			// Map contains validation id and regex extracted from the xml
+			Map validation = (Map) it.next();
+			String id = (String) validation.get("id");
+			id = "defaultValidation_" + id;
+			String regex = (String) validation.get("regex");
+
+			this.defaultValidationIds.add(id);
+
+			// Create bean for the validation
+			Object source = parserContext.extractSource(element);
+			RootBeanDefinition bean = new RootBeanDefinition(Validation.class);
+			bean.setSource(source);
+			bean.setRole(BeanDefinition.ROLE_INFRASTRUCTURE);
+			bean.getPropertyValues().add("rejectedPattern", regex);
+
+			// Register bean
+			parserContext.getRegistry().registerBeanDefinition(id, bean);
+
+		}
 
 	}
 
