@@ -1,0 +1,24 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<defaultValidations>
+	<!-- SQL Injection attacks detection validation rule -->
+	<validation id="SQLInjection">
+ 		<![CDATA[(\s|\S)*((%27)|(')|(%3D)|(=)|(/)|(%2F)|(")|((%22)|(-|%2D){2})|(%23)|(%3B)|(;))+(\s|\S)*]]>
+	</validation>
+	<!-- Code execution attacks detection validation rule -->
+	<validation id="execCommand">
+		<![CDATA[(\s|\S)*(exec(\s|\+)+(s|x)p\w+)(\s|\S)*]]>
+	</validation>
+	<!-- XSS attacks detection validation rules -->
+	<validation id="simpleXSS">
+		<![CDATA[(\s|\S)*((%3C)|<)((%2F)|/)*[a-z0-9%]+((%3E)|>)(\s|\S)*]]>
+	</validation>
+	<validation id="imageXSS">
+		<![CDATA[(\s|\S)*((%3C)|<)((%69)|i|I|(%49))((%6D)|m|M|(%4D))((%67)|g|G|(%47))[^\n]+((%3E)|>)(\s|\S)*]]>
+	</validation>
+	<validation id="scriptXSS">
+		<![CDATA[(\s|\S)*((%73)|s)(\s)*((%63)|c)(\s)*((%72)|r)(\s)*((%69)|i)(\s)*((%70)|p)(\s)*((%74)|t)(\s|\S)*]]>
+	</validation>
+	<validation id="evalXSS">
+		<![CDATA[(\s|\S)*((%65)|e)(\s)*((%76)|v)(\s)*((%61)|a)(\s)*((%6C)|l)(\s|\S)*]]>
+	</validation>
+</defaultValidations>
